# librpcsoc

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  svc_udp.c
